Thu Jun 14 23:48:15 GMT 2012  Olly Betts <olly@survex.com>

	* docs/admin_notes.rst: Correction - we don't "create a lock file", we
	  "lock a file".

Tue Jun 12 13:08:58 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Make sure XAPIAN_MAX_CHANGESETS gets unset
	  after testcases which set it, so further testcases don't waste time
	  generating changesets.

Tue Jun 12 12:11:51 GMT 2012  Olly Betts <olly@survex.com>

	* docs/replication.rst: The value of XAPIAN_MAX_CHANGESETS does now
	  actually determine how many changesets we keep.

Tue Jun 12 01:20:59 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Force link_all_deplibs_CXX=no for Solaris.

Tue Jun 12 01:08:17 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-config.in: Don't interpret a missing .la file as meaning that
	  we only have static libraries.

Sun Jun 10 12:57:16 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_btreebase.cc,backends/brass/brass_btreebase.h,
	  backends/brass/brass_check.cc: Remove is_empty(), tweak
	  calculate_last_block() to calculate the bit map size correctly in
	  the case of an empty table, and use the bit map size instead of
	  is_empty() in xapian-check.
	* backends/chert/chert_btreebase.cc,backends/chert/chert_btreebase.h,
	  backends/chert/chert_check.cc: Make equivalent changes for chert.

Sun Jun 10 11:27:52 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_table.cc,backends/brass/brass_table.h: We don't
	  need the workaround for existing tables which were built with a 32
	  bit item count for brass, since that bug was fixed in 1.1.4, which
	  is the same version which brass was added in.

Sun Jun 10 11:20:58 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_btreebase.cc,backends/brass/brass_btreebase.h,
	  backends/chert/chert_btreebase.cc,backends/chert/chert_btreebase.h:
	  Remove unused copy constructors for BrassTable_base and
	  ChertTable_base.
