@@ -20,6 +20,16 @@
 #ifndef XAPIAN_INCLUDED_XAPIAN_H
 #define XAPIAN_INCLUDED_XAPIAN_H
 
+// Qt headers '#define slots' by default, which clashes with us using it as a
+// class member name.  Including <xapian.h> first is a simple workaround, or
+// you can use 'no_keywords' to stop Qt polluting the global macro namespace,
+// as described here:
+//
+// http://qt-project.org/doc/qt-5.0/signalsandslots.html#using-qt-with-3rd-party-signals-and-slots
+#if defined slots && defined Q_OBJECT
+# error "Include <xapian.h> before Qt headers, or put 'CONFIG += no_keywords' in your .pro file and use Q_SLOTS instead of slots, etc"
+#endif
+
 // Define so that deprecation warnings are given to API users, but not
 // while building the library.
 #define XAPIAN_IN_XAPIAN_H
